--- a/products.html
+++ b/products.html
@@ -16,7 +16,6 @@
 
    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
-   
 </head>
 <body>
     <!-- navbar -->
@@ -31,7 +30,7 @@
         <button class="btn btn-primary join-item rounded-full"><i class="fa fa-search"></i></button>
       </div>
     <div class="flex gap-6">
-     <div class="text-justify">
+     <div class="text-justify ">
       <p>CALL TO ORDER</p>
       <p class="text-2xl">+123 4567 890
       </p>
@@ -72,8 +71,8 @@
             </div>
         </div>
             <!-- products -->
-            <section class="flex my-10 mx-24">
-              <div style="width:40%">
+            <section class="flex justify-between my-10 mx-24">
+              <div style="height:150px; overflow-y: scroll;">
                 <h1 class="text-2xl">Brand</h1>
                 <div class="flex mt-6 gap-4">
                   <i class="text-xl fa-regular fa-square-check"></i>
